# qvwm

./: INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in
autom4te.cache/: output.0  traces.0
doc/: Makefile  Makefile.am  Makefile.in
images/: Imakefile  Makefile  Makefile.am  Makefile.in  addremove.xpm  anjuta.xpm  ark.xpm  def16.ani  def32.ani  delphi16.xpm  emacs16.ani  emacs32.ani  ethereal16.xpm  exit.xpm  exit32.ani  find.xpm  find32.ani  gtksozluk2.xpm  gtksozluk216.xpm  help.xpm  help32.xpm  icon16.ani  icon32.ani  minimize.xpm  mozilla.xpm  mycomputer.xpm  mynetwork.xpm  netscape16.ani  netscape32.ani  pgadmin3.xpm  pgadmin316.xpm  programs.xpm  quit32.ani  qvwmdesk.ani  rp7.xpm  run.xpm  run32.ani  setting32.ani  settings.xpm  taskbar16.ani  (+10 more)
man/: Makefile  Makefile.in  qvwm.1x  qvwm.man
rc/: Makefile  Makefile.in  default.qvwm-theme  french.qvwmrc  french.qvwmrc.in  german.qvwmrc  italian.qvwmrc  kanji.qvwmrc  kanji.qvwmrc.in  korean.qvwmrc  korean.qvwmrc.in  light.qvwmrc  light.qvwmrc.in  portuguese.qvwmrc  system.qvwmrc  system.qvwmrc.in
sounds/: Makefile  Makefile.in
src/: Imakefile  Makefile  Makefile.am  Makefile.in  Makefile.std  configure.cc  desktop.cc  desktop.h  event.cc  exit_dialog.cc  fbutton.cc  focus_mgr.cc  function.cc  function.h  icon.cc  key.cc  main.cc  main.h  menu.cc  menu.h  menu_func.cc  parse.cc  qvwm  qvwmrc.cc  qvwmrc.h  radio_button.cc  remote_cmd.cc  startmenu.cc  switcher.cc  switcher.h  taskbar.cc  taskbar.h  tbutton.cc  (+7 more)
(+52 files in other folders)
