pixmapdir   = $(QVWMDIR)/images

pixmap_DATA = \
def16.ani \
def32.ani \
emacs16.ani \
emacs32.ani \
exit32.ani \
find32.ani \
help32.xpm \
icon16.ani \
icon32.ani \
netscape16.ani \
netscape32.ani \
quit32.ani \
run32.ani \
setting32.ani \
taskbar16.ani \
xcalc16.xpm \
xcalc32.ani \
xeyes16.ani \
xeyes32.ani \
xterm16.xpm \
xterm32.ani \
xv16.xpm \
xv32.xpm \
qvwmdesk.ani \
clouds.xpm \
clouds2.xpm \
space.ani \
space2.ani \
logo_clouds.xpm \
logo_os2.xpm

EXTRA_DIST = $(pixmap_DATA) Imakefile Makefile.std
